force-app/main/default/objects/Partial_Soft_Credit__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>The amount to be soft credited.</description>
    <inlineHelpText>The amount to be soft credited.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>