force-app/main/default/objects/Partial_Soft_Credit__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <description>The full name of the Contact who gets this soft credit (read only).</description>
    <formula>HYPERLINK(&apos;/&apos; + Contact__c,Contact__r.FirstName + &apos; &apos; + Contact__r.LastName, &apos;_self&apos;)</formula>
    <inlineHelpText>The full name of the Contact who gets this soft credit (read only).</inlineHelpText>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>