force-app/main/default/objects/Partial_Soft_Credit__c/fields/Contact_Role_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The Opportunity Contact Role this soft credit applies to.</description>
    <inlineHelpText>The Opportunity Contact Role this soft credit applies to.</inlineHelpText>
    <label>Contact Role ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>