force-app/main/default/objects/Partial_Soft_Credit__c/fields/Role_Name__c.field-meta.xml
<CustomField>
    <fullName>Role_Name__c</fullName>
    <description>The Role of this soft credit.</description>
    <inlineHelpText>The Role of this soft credit.</inlineHelpText>
    <label>Role Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>